[tool.poetry]
name = "hogwart_apitest"
version = "0.1.0"
description = ""
authors = ["zhaodongdong <2823567559@qq.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6.0，<4.0"
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
